# Assignment-1

./: main.py  pyproject.toml
.github/workflows/: ci.yml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
